# BCDelivery

./: .gitignore  README.md  config.py  main.py  requirements-3.11.txt  requirements-3.7.txt  requirements.txt  test.py
DroneCommunicator/: drone_ip_table.json  ip_table.py  main.py  send_command.py  tello.py  test.py
app/: fastapi.py
app/core/models/: base_model.py  dict_scheduler.py  robo_ep.py  simulator.py  tello.py
app/core/models/sim_models/: device_info.py  scenario_generator.py  test_model.py  thread_commnuicator.py
app/core/routers/: drone.py  drone_command.py  response_format.py  robot.py  robot_ip_table.json  sim.py
blockchain/: Cargo.toml  remote_config
blockchain/src/: auth.rs  blockchain.rs  car.rs  drone.rs  h264_decoder.rs  main.rs  monitoring.rs  p2p.rs  remote.rs  remote_server.rs
blockchain/src/instance/: config.rs  mod.rs  setup.rs
blockchain/src/instance/key/: usb.pem  usb_private_key.pem
rust_drone/: Cargo.toml
rust_drone/src/: drone.rs  main.rs
test/: proto.py  test.py  test2.py  test_robo.py
unityscripts/: CameraSwitch.cs  DataSigner.cs  DronCamera.cs  Droneplay.cs  ImageRendering.cs  ObjectClicker.cs  ObjectDefine.cs  Player.cs  PlayerTextUpdate.cs  PrefabControl.cs  PrefabControl_NotSimulationControl.cs  RawImageTexture.cs  RemoteButtonClick.cs  RemoteKeyboard.cs  httpmodule.cs
unityscripts/Manager/: CommManager.cs  GameManager.cs  PrefabManager.cs  RemoteInputManager.cs
