[package]
name = "rust_drone"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.10.0"
lazy_static = "1.4"
sha2 = "0.10"
rsa = "0.5"
pnet = "0.35.0"
local-ip-address = "0.6.1"
walkdir = "2.3.3"
image = "0.23"
ffmpeg-next = "*"